test/conformance/reject/heading_sequence.hdoc
hdoc(version="2.0", lang="en");

h3 "Third level first"
h1 "Top"
h3 "Third without second"
